--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ witchcraft_sln/docs/*
 witchcraft_sln/witchcraft/asset/Carl Metropolitan Builders grid.png
 witchcraft_sln/witchcraft/asset/grid02.jpg
 witchcraft_sln/witchcraft/asset/UV_Grid_Sm.jpg
+witchcraft_sln/witchcraft/asset/soccer_game/custom/*
