--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -124,6 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="audio_manager\audio_manager__tst.cc" />
     <ClCompile Include="console\console__tst.cc" />
     <ClCompile Include="engine\engine.cc" />
     <ClCompile Include="engine\engine_object__tst.cc" />
@@ -139,6 +140,7 @@
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="message_bus\message_bus__tst.cc" />
+    <ClCompile Include="miniaudio.cc" />
     <ClCompile Include="project_loader\project_loader__tst.cc" />
     <ClCompile Include="render_manager\opengl_shader.cc" />
     <ClCompile Include="render_manager\opengl_shader__tst.cc" />
@@ -169,6 +171,7 @@
     <ClCompile Include="utility\tests_utility.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="audio_manager\audio_manager.h" />
     <ClInclude Include="console\console.h" />
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\engine_id.h" />
@@ -186,6 +189,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="logging\error_log_manager.h" />
     <ClInclude Include="message_bus\message_bus.h" />
+    <ClInclude Include="miniaudio.h" />
     <ClInclude Include="project_loader\project_loader.h" />
     <ClInclude Include="render_manager\opengl_shader.h" />
     <ClInclude Include="render_manager\opengl_texture.h" />
