--- a/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
+++ b/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
@@ -40,25 +40,6 @@ path: asset/soccer_game/images/player_a.asset
 
 
 // sfx
-// Ellie's note: not sure if we should really have a different <.asset>
-// file for each sfx file.  I mean, we can, but I think all the sfx are
-// just "play now" kind of interactions, and we'll be delivering the whole
-// lot of them to the audio manager anyway
-// TODO: figure out a reasonable, concise way to do that
-//path: asset/soccer_game/sounds/jump_p1.asset
-//path: asset/soccer_game/sounds/jump_p2.asset
-//path: asset/soccer_game/sounds/jump_p3.asset
-//path: asset/soccer_game/sounds/jump_p4.asset
-//path: asset/soccer_game/sounds/kick_a.asset
-//path: asset/soccer_game/sounds/kick_b.asset
-//path: asset/soccer_game/sounds/menu_p1.asset
-//path: asset/soccer_game/sounds/menu_p2.asset
-//path: asset/soccer_game/sounds/menu_p3.asset
-//path: asset/soccer_game/sounds/menu_p4.asset
-//path: asset/soccer_game/sounds/menu_selection_click.asset
-//path: asset/soccer_game/sounds/open_00.asset
-//path: asset/soccer_game/sounds/open_01.asset
-//path: asset/soccer_game/sounds/phone.asset
-//path: asset/soccer_game/sounds/pickup.asset
-//path: asset/soccer_game/sounds/success.asset
-//path: asset/soccer_game/sounds/win.asset
+path: asset/soccer_game/sounds/music.asset
+path: asset/soccer_game/sounds/players.asset
+path: asset/soccer_game/sounds/sfx.asset
