--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="audio_manager\audio_manager.h" />
+    <ClInclude Include="audio_manager\audio_resource.h" />
     <ClInclude Include="console\console.h" />
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\engine_id.h" />
