--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="miniaudio.cc">
       <Filter>Source Files\vendor\miniaudio</Filter>
     </ClCompile>
+    <ClCompile Include="console\console.cc">
+      <Filter>Source Files\console</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\engine.h">
