--- a/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
+++ b/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
@@ -6,11 +6,12 @@
 
 // configuration
 // holds general information used by the project
-window_pos: 0, 0
+window_pos: 30, 30
 window_wh: 800, 600
 window_fullscreen: true
 window_capture_mouse: false
 use_vsync: false
+window_title: witchcraft::soccer
 
 
 // project files
