--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ witchcraft_sln/witchcraft/asset/UV_Grid_Sm.jpg
 witchcraft_sln/witchcraft/asset/soccer_game/custom/*
 witchcraft_sln/lib/miniaudio/*
 witchcraft_sln/lib/portaudio/*
+witchcraft_sln/witchcraft/render_manager/render_object_2d.h
