--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ witchcraft_sln/witchcraft/asset/soccer_game/custom/*
 witchcraft_sln/lib/miniaudio/*
 witchcraft_sln/lib/portaudio/*
 witchcraft_sln/witchcraft/render_manager/render_object_2d.h
+witchcraft_sln/.vs/*
