--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -141,7 +141,6 @@
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="message_bus\message_bus__tst.cc" />
-    <ClCompile Include="miniaudio.cc" />
     <ClCompile Include="project_loader\project_loader__tst.cc" />
     <ClCompile Include="render_manager\opengl_shader.cc" />
     <ClCompile Include="render_manager\opengl_shader__tst.cc" />
@@ -180,7 +179,8 @@
     <ClInclude Include="engine\engine_object.h" />
     <ClInclude Include="engine\enum_tools.h" />
     <ClInclude Include="engine\exception.h" />
-    <ClInclude Include="gameplay\gameplay_manager.h" />
+    <ClInclude Include="gameplay_manager\gameplay_manager.h" />
+    <ClInclude Include="gameplay_manager\game.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_opengl3.h" />
@@ -190,6 +190,8 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="logging\error_log_manager.h" />
+    <ClInclude Include="memory\allocation_tracker.h" />
+    <ClInclude Include="memory\linear_allocator.h" />
     <ClInclude Include="message_bus\message_bus.h" />
     <ClInclude Include="miniaudio.h" />
     <ClInclude Include="project_loader\project_loader.h" />
